adding teaserfigure to report

--- a/tex_files/rapport/main.tex
+++ b/tex_files/rapport/main.tex
@@ -33,14 +33,22 @@
 }
 \email{alexandre.lutt@eleves.enpc.fr}
 
+\begin{teaserfigure}
+  \includegraphics[width=\textwidth]{sampleteaser}
+  \caption{Seattle Mariners at Spring Training, 2010.}
+  \Description{Enjoying the baseball game from the third-base
+  seats. Ichiro Suzuki preparing to bat.}
+  \label{fig:teaser}
+\end{teaserfigure}
+
 \maketitle
 \pagestyle{plain}
 
 \section{Introduction}
 
-\lipsum[1] \cite{main_paper}
+\lipsum[1]~\cite{main_paper}
 
-\lipsum[1] \cite{rpca_paper}
+\lipsum[1]~\cite{rpca_paper}
 
 %%
 %% The next two lines define the bibliography style to be used, and
