adding glpca paper

--- a/tex_files/rapport/bib.bib
+++ b/tex_files/rapport/bib.bib
@@ -15,3 +15,12 @@
   url           = "http://arxiv.org/abs/0912.3599",
   note          = "",
 }
+
+@Article{glpca_paper,
+  author        = "Bo Jiang, Chris Ding, Bin Luo and Jin Tang",
+  title         = "Graph-Laplacian PCA: Closed-form Solution and Robustness",
+  month         = "January",
+  year          = "2013",
+  url           = "",
+  note          = "",
+}
