--- a/tex_files/rapport/main.tex
+++ b/tex_files/rapport/main.tex
@@ -50,6 +50,8 @@
 
 \lipsum[1]~\cite{rpca_paper}
 
+\lipsum[1]~\cite{glpca_paper}
+
 %%
 %% The next two lines define the bibliography style to be used, and
 %% the bibliography file.
