experimental setup + clustering error (notebook)

--- a/tex_files/rapport/bib.bib
+++ b/tex_files/rapport/bib.bib
@@ -24,3 +24,12 @@
   url           = "",
   note          = "",
 }
+
+@Article{admm_paper,
+  author        = "Stephen Boyd, Neal Parikhl, Eric Chu and Borja Peleato and Jonathan Eckstein",
+  title         = "Distributed optimization and statistical learning via the alternating direction method of multipliers",
+  month         = "January",
+  year          = "2010",
+  url           = "",
+  note          = "",
+}
