--- a/tex_files/rapport/main.tex
+++ b/tex_files/rapport/main.tex
@@ -4,9 +4,9 @@
 \usepackage{bm}
 \usepackage{bbm}
 
-\settopmatter{printacmref=false} % Removes citation information below abstract
 \renewcommand\footnotetextcopyrightpermission[1]{}
 \newcommand{\sign}{\text{sign}}
+\settopmatter{printacmref=false} % Removes citation information below abstract
 \pagestyle{plain} % removes running headers
 
 %%
@@ -16,8 +16,6 @@
     Bib\TeX}}}
 
 \setcopyright{None}
-
-\settopmatter{printacmref=false}
 
 \begin{document}
 
@@ -59,14 +57,14 @@ As mentionned in the abstract, PCA is a useful tool for dimensionnality reductio
 
 \begin{equation*}
   \begin{aligned}
-  & \underset{L \in \mathbb{R}^{n \times p}}{\min}
-  & & ||X - L||_F^2 \\
+  & \underset{Q, U}{\min}
+  & & ||X - UQ^T||_F^2 \\
   & \text{subject to}
-  & & rank(L) \leqslant k \\
+  & & Q^TQ = I \\
   \end{aligned}
 \end{equation*}
 
-where $k$ is an integer parameter of the algorithm. It can be shown that this problem actually has a closed-form solution given by the first $k$ principal components of $X$.
+  where $||.||_F$ designates the Frobenius norm. It can be shown that this problem actually has a closed-form solution given by the principal components of $X$.
 
 However, the main drawback of PCA is that it is very sensitive to noise, corrupted data and outliers and thus cannot be used in many real-world applications.
 The sensitivity to noise has been partially solved by the introduction of a robust variant of PCA, RPCA~\cite{rpca_paper}. However, this algorithm is very slow on large datasets, which makes it impractical for many applications. 
@@ -78,30 +76,38 @@ This project aims to provide a simple and efficient implementation of those main
 \section{Algorithms}
 
 In this section, we are going to present the algorithms we implemented and compared for the benchmark.
+We can divide them into two categories: factorized and non-factorized models. The first category regroups the original PCA algorithm and its variants which aim to learn two matrix factors $U$ and $Q$ such that $X \approx UQ$. Those models often have the constraint $Q^TQ= I$, which, in the case of the original PCA, can be understood as the orthonormality condition of the eigenvectors basis of $X^TX$. On the other hand, the second category regroups PCA variants which try to learn a low-rank matrix $L$ such that $X = L + S$, where $S$ is sparse.
+For example, the original PCA algorithm, as well as GLPCA and RGLPCA are factorized models, while RPCA and the new variant introduced in~\cite{main_paper} are non-factorized models.
 
-\begin{itemize}
-  \item \textbf{Classsical PCA}: We used Scikit-Learn implementation of PCA, which computes the SVD of $X$ and returns the first $k$ principal components.
-  \item \textbf{RPCA}: We implemented (see algorithm~\ref{alg:rpca}) the algorithm described in~\cite{rpca_paper} using the ADMM (Alternating Direction Method of Multipliers) and following as closely as possible the pseudo-code provided in the paper.
-  This algorithm solves the following optimization problem:
+\subsection{Classical PCA} 
+
+We used Scikit-Learn implementation of PCA, which simply computes the SVD of $X$ and creates a low-rank approximation by using the first $k$ singular vectors of $X$.
+
+\subsection{Robust PCA}
+
+We implemented (see algorithm~\ref{alg:rpca}) the algorithm described in~\cite{rpca_paper} using the ADMM~\cite{admm_paper} (Alternating Direction Method of Multipliers) and following as closely as possible the pseudo-code provided in the paper.
+  This algorithm solves the following convex optimization problem:
 
   \begin{equation*}
     \begin{aligned}
-    & \underset{L, S \in \mathbb{R}^{n \times p}}{\min}
+    & \underset{L, S}{\min}
     & & ||L||_* + \lambda ||S||_1 \\
     & \text{subject to}
     & & L + S = X \\
     \end{aligned}
   \end{equation*}
 
-  where $||.||_*$ is the nuclear norm and $||.||_1$ is the $\ell_1$ norm. This problem is solved iteratively by alterining phases of optimization over $L$ and over $S$.
+  where $||.||_*$ is the nuclear norm and $||.||_1$ is the $\ell_1$ norm. This problem is solved iteratively by alterning between phases of optimization over $L$ and over $S$.
   
-  \item \textbf{GLPCA}: We also implemented (see algorithm~\ref{alg:glpca}) the algorithm described in~\cite{glpca_paper} using the closed-form solution proved in the original paper.
+\subsection{GLPCA}
+
+We also implemented (see algorithm~\ref{alg:glpca}) the algorithm described in~\cite{glpca_paper} using the closed-form solution proved in the original paper.
   
   This algorithm solves the following optimization problem:
 
   \begin{equation*}
     \begin{aligned}
-    & \underset{Q, U \in \mathbb{R}^{n \times k}}{\min}
+    & \underset{Q, U}{\min}
     & & ||X - UQ^T||_F^2 + \alpha Tr(Q^T (D-W) Q) \\
     & \text{subject to}
     & & Q^TQ = I \\
@@ -110,34 +116,38 @@ In this section, we are going to present the algorithms we implemented and compa
 
   Where $W$ is the adjacency matrix of the graph $\mathcal{G}$, $D$ is the degree matrix of $\mathcal{G}$, and $\alpha$ is a hyperparameter of the algorithm. In pratice, we followed the pseudo-code provided in paper~\cite{glpca_paper} and used the closed-form solution obtained when reformulating the problem using $\alpha = \dfrac{\beta}{1 - \beta} \dfrac{\lambda_n}{\xi_n}$ (where $\lambda_n$ and $\xi_n$ are respectively the maximum eigenvalues of $X^TX$ and $D-W$) and differentiating the objective function with respect to $Q$ and $U$.
 
-  \item \textbf{RGLPCA}: We also implemented (see algorithm~\ref{alg:rglpca}) the robust version of the previous algorithm also mentionned in~\cite{glpca_paper}. This algorithm solves the following optimization problem:
+\subsection{RGLPCA}
+
+We also implemented (see algorithm~\ref{alg:rglpca}) the robust version of the previous algorithm also mentionned in~\cite{glpca_paper}. This algorithm solves the following optimization problem:
   
   \begin{equation*}
     \begin{aligned}
-    & \underset{Q, U \in \mathbb{R}^{n \times k}}{\min}
+    & \underset{Q, U}{\min}
     & & ||X - UQ^T||_{2, 1} + \alpha Tr(Q^T (D-W) Q) \\
     & \text{subject to}
     & & Q^TQ = I \\
     \end{aligned}
   \end{equation*}
 
-  where $||.||_{2, 1}$ is the $\ell_{2, 1}$ norm defined by $||A||_{2, 1} = \sum\limits_{j=1}^n \sqrt{\sum \limits_{i=1}^p A_{ij}^2}$. This problem is solved using the ADMM algorithm, following the pseudo-code provided in the paper.
+  where $||.||_{2, 1}$ is the $\ell_{2, 1}$ norm defined by $||A||_{2, 1} = \displaystyle \sum\limits_{j=1}^n \sqrt{\sum \limits_{i=1}^p A_{ij}^2}$. This problem is solved using the ADMM~\cite{admm_paper} algorithm, following the pseudo-code provided in the paper.
   
-  \item \textbf{Proposed PCA}: Finally, we implemented (see algorithm~\ref{alg:our_pca}) the algorithm described in~\cite{main_paper} which claims to be more robust than the previous ones while keeping the computational cost low. This algorithm solves the following optimization problem:
+\subsection{RPCA on graphs}
+
+Finally, we implemented (see algorithm~\ref{alg:our_pca}) the RPCA on graphs algorithm described in~\cite{main_paper} which claims to be more robust than the previous ones while keeping the computational cost low. This algorithm solves the following convex optimization problem:
   
   \begin{equation*}
     \begin{aligned}
-    & \underset{L, S \in \mathbb{R}^{n \times p}}{\min}
+    & \underset{L, S}{\min}
     & & ||L||_* + \lambda ||S||_1 + \gamma Tr(L \phi L^T) \\
     & \text{subject to}
-    & & X = L + S \\
+    & & L + S = X\\
     \end{aligned}
   \end{equation*}
 
-  Where $\phi$ is the graph Laplacian of $\mathcal{G}$ and $\gamma$ is a hyperparameter of the algorithm. As the previous methods, it uses the ADMM algorithm to solve this problem by alternating phases of optimization over $L$ and over $S$.
+  Where $\phi$ is the graph Laplacian of $\mathcal{G}$ and $\gamma$ is a hyperparameter of the algorithm. As the previous methods, it uses the ADMM~\cite{admm_paper} algorithm to solve this problem by alterning phases of optimization over $L$ and over $S$.
 
-\end{itemize}
- 
+\section{Pseudo-code}
+
 In order to make notations more concise, we will define the following shrinkage and singular value tresholding operators (defined on the space of square matrices):
 
 \begin{equation*}
@@ -150,7 +160,7 @@ In order to make notations more concise, we will define the following shrinkage 
 \begin{algorithm}
   \caption{RPCA algorithm}\label{alg:rpca}
   \begin{algorithmic}
-      \Require $\mathbf{X} \in \mathbb{R}^{m \times n}$, $\varepsilon$, $n_{iter}$
+      \Require $\mathbf{X} \in \mathbb{R}^{p \times n}$, $\varepsilon$, $n_{iter}$
       
       \State $\lambda \gets \frac{1}{\sqrt{\max(m, n)}}$
       \State $\mu \gets \frac{\max(m, n)}{4 \times ||\mathbf{X}||_1}$
@@ -173,14 +183,14 @@ In order to make notations more concise, we will define the following shrinkage 
   \begin{algorithm}
   \caption{GLPCA algorithm}\label{alg:glpca}
   \begin{algorithmic}
-      \Require $\mathbf{X} \in \mathbb{R}^{m \times n}$, $\mathcal{G}$,  $\beta$
+      \Require $\mathbf{X} \in \mathbb{R}^{p \times n}$, $\mathcal{G}$,  $\beta$
       
       \State $\mathbf{W} \gets adj(\mathcal{G})$
       \State $\mathbf{D} \gets diag(\{d_1, d_2, ..., d_{n_{\text{nodes}}}\})$
       \State $\mathbf{L} \gets \mathbf{D} - \mathbf{W}$
       
-      \State $\lambda_n \gets \Re(\max(eigenval(\mathbf{X}^T\mathbf{X}))$
-      \State $\xi_n \gets \Re(\max(eigenval(\mathbf{L}))$
+      \State $\lambda_n \gets \Re(\max(eigenval(\mathbf{X}^T\mathbf{X})))$
+      \State $\xi_n \gets \Re(\max(eigenval(\mathbf{L})))$
       
       \State $\mathbf{G}_{\beta} \gets (1 - \beta)(\mathbf{I} - \frac{1} {\lambda_n}\mathbf{X}^T\mathbf{X}) + \frac{\beta}{\xi_n}\mathbf{L}$
       
@@ -195,7 +205,7 @@ In order to make notations more concise, we will define the following shrinkage 
   \begin{algorithm}[H]
   \caption{RGLPCA algorithm}\label{alg:rglpca}
   \begin{algorithmic}
-      \Require $\mathbf{X} \in \mathbb{R}^{m \times n}$, $\mathcal{G}$, $\beta$, $k$, $\rho$, $n_{iter}$
+      \Require $\mathbf{X} \in \mathbb{R}^{p \times n}$, $\mathcal{G}$, $\beta$, $k$, $\rho$, $n_{iter}$
       
       \State $\mathbf{X}_0 \gets \mathbf{X}$
       \State $\beta_0 \gets \beta$
@@ -233,7 +243,7 @@ In order to make notations more concise, we will define the following shrinkage 
   
   
   \begin{algorithm}[H]
-  \caption{Proposed PCA algorithm}\label{alg:our_pca}
+  \caption{RPCA on graphs algorithm}\label{alg:our_pca}
   \begin{algorithmic}
       \Require $\mathbf{X} \in \mathbb{R}^{p \times n}$, $\mathcal{G}$, $n_{iter}$, $\gamma$, $\varepsilon$
       
@@ -276,12 +286,23 @@ In order to make notations more concise, we will define the following shrinkage 
   \end{algorithm}
 
 
-
-
 \section{Experimental setup}
 
+For the benchmark, we compared these algorithms on two different tasks: low-rank recovery for corrupted data and clustering. For the low-rank recovery task, we used the CMU PIE dataset which is a dataset of images of faces with different angles and lighting. For the clustering task, we used the AT\&T dataset which is another dataset of images of faces.
 
+\subsection{Low-rank recovery for corrupted data}
 
+For this task, we used the PIE dataset, and more specifically 20 64$\times$64 images of the same 40 people under different lighting with a constant camera angle, and corrupted them by adding a single random black block of 25\% of the image dimensions to each sample. We then used the different algorithms to recover the concatenation of the original images from the concatenation of the corrupted ones. The main hypothesis here is that this long concatenation matrix will be well approximated by a low-rank matrix, since the difference in lighting and corruption is supposed to be sparse. We evaluated the different methods mostly by visual inspection of the results, but also by computing the mean squared error between the original and recovered images.
+
+\subsection{Clustering}
+
+For this task, we used the AT\&T dataset, and more specifically 400 112$\times$92 images aggregated in 40 equally sampled classes (each class corresponding to one individual). We then compute the low-rank approximation of the concatenation of the images, and used the resulting matrix as a feature matrix for clustering. We then evaluated the different methods by computing the labels produced by the KMeans algorithm trained on this feature matrix, and comparing them with the original labels of the dataset. We compared the different methods by computing the $ $ error between, as well as the Adjusted Rand Index (ARI) as well as the Normalized Mutual Information (NMI). These metrics can be easily computed given the confusion matrix and the raw labels:
+
+\[ ARI = 2 \frac{TP \times TN - FN \times FP}{(TP + FN)\times(FN + TN) + (TP + FP)\times(FP + FN)} \]
+
+\[ NMI = \frac{I(y_{\text{true}}, y_{\text{pred}})}{\sqrt{H(y_{\text{true}}) \times H(y_{\text{pred}})}} \]
+
+where $TP$ is the number of true positives, $TN$ is the number of true negatives, $FP$ is the number of false positives, $FN$ is the number of false negatives, $I(y_{\text{true}}, y_{\text{pred}})$ is the mutual information between $y_{\text{true}}$ and $y_{\text{pred}}$, and $H(y)$ is the entropy of $y$.
 
 \section{Results}
 
