test clustering RPCA

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -499,7 +499,7 @@
     "    ARI_list.append(adjusted_rand_score(labels_true, labels_pred))\n",
     "    NMI_list.append(normalized_mutual_info_score(labels_true, labels_pred))\n",
     "    error_list.append(clustering_error(labels_true, labels_pred))\n",
-    "print(\"Method : RPCA, beta = \" + str(beta))\n",
+    "print(\"Method : RPCA\")\n",
     "print(\"ARI = \", np.max(ARI_list))\n",
     "print(\"NMI = \", np.max(NMI_list))\n",
     "print(\"Min error = \", np.min(error_list))\n",
