compare clustering identity

--- a/test_clustering.ipynb
+++ b/test_clustering.ipynb
@@ -104,6 +104,36 @@
     "        \n",
     "print(f'Best error: {best_err:.2f}%')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best error: 45.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels_true = np.arange(n_classes).repeat(20)\n",
+    "best_err = 100\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    kmeans = KMeans(n_clusters=n_classes).fit(X)\n",
+    "\n",
+    "    pred_clusters = kmeans.labels_\n",
+    "    err = clustering_error(labels_true, pred_clusters)\n",
+    "    \n",
+    "    if err < best_err:\n",
+    "        best_err = err\n",
+    "        best_labels = pred_clusters\n",
+    "        \n",
+    "print(f'Best error: {best_err:.2f}%')"
+   ]
   }
  ],
  "metadata": {
