--- a/test_clustering.ipynb
+++ b/test_clustering.ipynb
@@ -64,11 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_classes = 3\n",
+    "n_classes = 5\n",
     "X_data = load_pie_dataset(n_classes=n_classes)\n",
     "X = X_data.reshape(X_data.shape[0], -1)\n",
     "scaler = Normalizer()\n",
-    "X = scaler.fit_transform(X)"
+    "X = scaler.fit_transform(X)\n",
+    "\n",
+    "labels_true = np.arange(n_classes).repeat(20)\n",
+    "\n",
+    "n_trials = 50"
    ]
   },
   {
@@ -80,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best error: 35.00%\n"
+      "Best error: 40.00%\n"
      ]
     }
    ],
@@ -88,51 +92,75 @@
     "model = models.RobustPCA()\n",
     "L, S = model.fit(X)\n",
     "\n",
-    "U, S, Q = np.linalg.svd(L, full_matrices=False)\n",
-    "labels_true = np.arange(n_classes).repeat(20)\n",
-    "best_err = 100\n",
+    "errors = np.zeros(n_trials)\n",
     "\n",
-    "for _ in range(100):\n",
+    "U, S, Q = np.linalg.svd(L, full_matrices=False)\n",
+    "Q = L @ Q.T\n",
+    "\n",
+    "for i in range(n_trials):\n",
     "    kmeans = KMeans(n_clusters=n_classes).fit(Q)\n",
     "\n",
     "    pred_clusters = kmeans.labels_\n",
     "    err = clustering_error(labels_true, pred_clusters)\n",
-    "    \n",
-    "    if err < best_err:\n",
-    "        best_err = err\n",
-    "        best_labels = pred_clusters\n",
-    "        \n",
-    "print(f'Best error: {best_err:.2f}%')"
+    "    errors[i] = err\n",
+    "            \n",
+    "print(f'Best error: {np.min(errors):.2f}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best error: 0.00%\n"
+      "Best error: 56.00%\n"
      ]
     }
    ],
    "source": [
-    "labels_true = np.arange(n_classes).repeat(20)\n",
-    "best_err = 100\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
-    "for _ in range(100):\n",
+    "errors = np.zeros(n_trials)\n",
+    "model = PCA()\n",
+    "X_pca = model.fit_transform(X)\n",
+    "\n",
+    "for i in range(n_trials):\n",
+    "    kmeans = KMeans(n_clusters=n_classes).fit(X_pca)\n",
+    "\n",
+    "    pred_clusters = kmeans.labels_\n",
+    "    err = clustering_error(labels_true, pred_clusters)\n",
+    "    errors[i] = err\n",
+    "\n",
+    "print(f'Best error: {np.min(errors):.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best error: 60.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = np.zeros(n_trials)\n",
+    "\n",
+    "for i in range(n_trials):\n",
     "    kmeans = KMeans(n_clusters=n_classes).fit(X)\n",
     "\n",
     "    pred_clusters = kmeans.labels_\n",
     "    err = clustering_error(labels_true, pred_clusters)\n",
-    "    \n",
-    "    if err < best_err:\n",
-    "        best_err = err\n",
-    "        best_labels = pred_clusters\n",
-    "        \n",
-    "print(f'Best error: {best_err:.2f}%')"
+    "    errors[i] = err\n",
+    "\n",
+    "print(f'Best error: {np.min(errors):.2f}%')"
    ]
   }
  ],
